config/cloud/aws/vpc-cloudformation-template.yaml
AWSTemplateFormatVersion: 2010-09-09
Description: Create VPC, subnets and security group for raven.
Parameters:
  UserCidrBlock:
    Description: The IP addresses of this CIDR block can be used to visit raven's security group.
    Type: String
    MinLength: 9
    MaxLength: 18
    Default: 0.0.0.0/0
    AllowedPattern: '(\d{1,3})\.(\d{1,3})\.(\d{1,3})\.(\d{1,3})/(\d{1,2})'
    ConstraintDescription: Must be a valid CIDR block. For example, 1.2.3.4/16
Resources:
  Ec2Vpc:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock: 10.1.0.0/16
      EnableDnsSupport: True
      EnableDnsHostnames: True
  Ec2Subnet01:
    Type: AWS::EC2::Subnet
    DependsOn:
      - Ec2Vpc
    Properties:
      VpcId: !Ref Ec2Vpc
      CidrBlock: 10.1.0.0/24
      AvailabilityZone: ap-southeast-1a
  Ec2Subnet02:
    Type: AWS::EC2::Subnet
    DependsOn:
      - Ec2Vpc
    Properties:
      VpcId: !Ref Ec2Vpc
      CidrBlock: 10.1.1.0/24
      AvailabilityZone: ap-southeast-1b
  Ec2Subnet03:
    Type: AWS::EC2::Subnet
    DependsOn:
      - Ec2Vpc
    Properties:
      VpcId: !Ref Ec2Vpc
      CidrBlock: 10.1.2.0/24
      AvailabilityZone: ap-southeast-1c
  Ec2InternetGateway:
    Type: AWS::EC2::InternetGateway
  Ec2VpcGatewayAttachment:
    Type: AWS::EC2::VPCGatewayAttachment
    DependsOn:
      - Ec2Vpc
      - Ec2InternetGateway
    Properties:
      VpcId: !Ref Ec2Vpc
      InternetGatewayId: !Ref Ec2InternetGateway
  Ec2RouteTable:
    Type: AWS::EC2::RouteTable
    DependsOn:
      - Ec2Vpc
    Properties:
      VpcId: !Ref Ec2Vpc
  Ec2Route:
    Type: AWS::EC2::Route
    DependsOn:
      - Ec2InternetGateway
      - Ec2RouteTable
    Properties:
      RouteTableId: !Ref Ec2RouteTable
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId: !Ref Ec2InternetGateway
  Subnet01RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    DependsOn:
      - Ec2Subnet01
      - Ec2RouteTable
    Properties:
      SubnetId: !Ref Ec2Subnet01
      RouteTableId: !Ref Ec2RouteTable
  Subnet02RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    DependsOn:
      - Ec2Subnet02
      - Ec2RouteTable
    Properties:
      SubnetId: !Ref Ec2Subnet02
      RouteTableId: !Ref Ec2RouteTable
  Subnet03RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    DependsOn:
      - Ec2Subnet03
      - Ec2RouteTable
    Properties:
      SubnetId: !Ref Ec2Subnet03
      RouteTableId: !Ref Ec2RouteTable
  Ec2SecurityGroup:
    Type: AWS::EC2::SecurityGroup
    DependsOn:
      - Ec2Vpc
    Properties:
      GroupDescription: EC2 security group for raven.
      VpcId: !Ref Ec2Vpc
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: !Ref UserCidrBlock
        - IpProtocol: tcp
          FromPort: 0
          ToPort: 65535
          CidrIp: !Ref UserCidrBlock
  SSHSecurityGroupIngress:
    Type: AWS::EC2::SecurityGroupIngress
    DependsOn:
      - Ec2SecurityGroup
    Properties:
      IpProtocol: tcp
      FromPort: 22
      ToPort: 22
      GroupId: !Ref Ec2SecurityGroup
      SourceSecurityGroupId: !Ref Ec2SecurityGroup
  FullTcpEc2SecurityGroupIngress:
    Type: AWS::EC2::SecurityGroupIngress
    DependsOn:
      - Ec2SecurityGroup
    Properties:
      IpProtocol: tcp
      FromPort: 0
      ToPort: 65535
      GroupId: !Ref Ec2SecurityGroup
      SourceSecurityGroupId: !Ref Ec2SecurityGroup
  FullUdpEc2SecurityGroupIngress:
    Type: AWS::EC2::SecurityGroupIngress
    DependsOn:
      - Ec2SecurityGroup
    Properties:
      IpProtocol: udp
      FromPort: 0
      ToPort: 65535
      GroupId: !Ref Ec2SecurityGroup
      SourceSecurityGroupId: !Ref Ec2SecurityGroup
  FullIcmpEc2SecurityGroupIngress:
    Type: AWS::EC2::SecurityGroupIngress
    Description: Special port range from -1 to -1 means full.
    DependsOn:
      - Ec2SecurityGroup
    Properties:
      IpProtocol: icmp
      FromPort: -1
      ToPort: -1
      GroupId: !Ref Ec2SecurityGroup
      SourceSecurityGroupId: !Ref Ec2SecurityGroup
Outputs:
  VpcId:
    Description: ID of VPC.
    Value: !Ref Ec2Vpc
    Export:
      Name: !Join [ ":", [ "Raven", "EC2", "VPC" ] ]
  VpcCidrBlock:
    Description: The set of IP addresses for the VPC.
    Value:
      Fn::GetAtt: Ec2Vpc.CidrBlock
  Subnet01Id:
    Description: ID of subnet 01.
    Value: !Ref Ec2Subnet01
    Export:
      Name: !Join [ ":", [ "Raven", "EC2", "Subnet01" ] ]
  Subnet01AvailabilityZone:
    Description: The availability zone of subnet01.
    Value:
      Fn::GetAtt: Ec2Subnet01.AvailabilityZone
  Subnet02Id:
    Description: ID of subnet 02.
    Value: !Ref Ec2Subnet02
    Export:
      Name: !Join [ ":", [ "Raven", "EC2", "Subnet02" ] ]
  Subnet02AvailabilityZone:
    Description: The availability zone of subnet02.
    Value:
      Fn::GetAtt: Ec2Subnet02.AvailabilityZone
  Subnet03Id:
    Description: ID of subnet 03.
    Value: !Ref Ec2Subnet03
    Export:
      Name: !Join [ ":", [ "Raven", "EC2", "Subnet03" ] ]
  Subnet03AvailabilityZone:
    Description: The availability zone of subnet03.
    Value:
      Fn::GetAtt: Ec2Subnet03.AvailabilityZone
  Ec2SecurityGroup:
    Description: The security group ID that is associated with the VPC.
    Value: !Ref Ec2SecurityGroup
    Export:
      Name: !Join [ ":", [ "Raven", "EC2", "SecurityGroup" ] ]
